# sonic-buildimage

./: .artifactignore  .gitignore  .gitmodules  Makefile  Makefile.cache  Makefile.work  README.md  README.sbom.md  azure-pipelines-bluefield.yml  azure-pipelines.yml  bfb-mk-demo.sh  build_debian.sh  build_debug_docker_j2.sh  build_image.sh  onie-image-arm64.conf  onie-mk-demo.sh  slave.mk
.azure-pipelines/: azure-pipelines-UpgrateVersion.yml  azure-pipelines-build.yml  azure-pipelines-image-template.yml  build-template.yml  docker-ptf.yml  docker-sonic-mgmt.yml  docker-sonic-slave.yml  trigger-publish-artifacts-build.yml
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
dockers/: dockerfile-macros.j2
installer/: default_platform.conf  sharch_body.sh
rules/: config  dash-sai.mk  docker-base-bookworm.mk  docker-base-bullseye.dep  docker-base-bullseye.mk  docker-base-trixie.dep  docker-base-trixie.mk  docker-bmp.mk  docker-config-engine-bookworm.mk  docker-config-engine-bullseye.dep  docker-config-engine-bullseye.mk  docker-config-engine-buster.mk  docker-config-engine-trixie.dep  docker-config-engine-trixie.mk  docker-dash-ha.mk  docker-fpm-frr.mk  docker-gnmi-sidecar.dep  docker-gnmi-sidecar.mk  docker-gnmi-test.dep  docker-gnmi-test.mk  docker-gnmi.mk  docker-macsec.mk  docker-mux.mk  docker-orchagent.mk  docker-platform-monitor.mk  docker-restapi-sidecar.mk  docker-router-advertiser.mk  (+41 more)
src/libraries/sonic-fib/tests/: Makefile.am  c_api_ut.cpp  main.cpp  nexthopgroup_debug_ut.cpp  nexthopgroupfull_json_ut.cpp  nexthopgroupfull_ut.cpp
(+1602 files in other folders)
